--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -4753,7 +4753,7 @@ table.view {
     display: none;
 }
 
-button #powered_by {
+button #powered_by, #evolved_by {
     background:none;
     border:none;
 }
